Add enemy contact visualization support
